# examiq

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  fly.toml  pyproject.toml
.github/workflows/: ci.yml
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/admin/: page.tsx
frontend/app/admin/create-exam/: page.tsx
frontend/app/admin/create-item/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/exam/[session_id]/: page.tsx
frontend/app/login/: page.tsx
frontend/app/register/: page.tsx
frontend/app/results/[session_id]/: page.tsx
frontend/lib/: api.ts  store.ts  utils.ts
frontend/types/: index.ts
scripts/: seed_demo.py
src/api/: main.py
src/api/middleware/: auth.py
src/api/routes/: analytics.py  auth.py  exam.py  health.py  items.py
src/core/: security.py  settings.py
src/db/: init_db.py  models.py
src/ml/gnn/: model.py
src/ml/irt/: cat_engine.py  model.py
src/ml/nlp/: similarity.py
src/services/: exam_service.py
src/worker/: tasks.py
tests/: test_irt.py
