[project]
name = "examiq"
version = "1.0.0"
description = "Adaptive Exam Intelligence Platform — IRT + GNN Anti-Cheat"
requires-python = ">=3.11"

dependencies = [
    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.12",
    "slowapi>=0.1.9",
    "sse-starlette>=2.1.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "redis[hiredis]>=5.2.0",

    # IRT / Bayesian
    "pymc>=5.16.0",
    "numpy>=1.26.0",
    "scipy>=1.14.0",
    "pandas>=2.2.0",
    "arviz>=0.19.0",

    # GNN + NLP
    "torch>=2.5.0",             # CPU version
    "torch-geometric>=2.6.0",
    "sentence-transformers>=3.3.0",

    # Task Queue
    "celery[redis]>=5.4.0",

    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",

    # Monitoring
    "prometheus-client>=0.21.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "structlog>=24.4.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "tenacity>=9.0.0",
    "orjson>=3.10.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src"]